[package]
name = "fysarum_query"
version = "0.1.0"
edition = "2024"

[dependencies]
fysarum_storage = { path = "../fysarum_storage" }
fysarum_compute = { path = "../fysarum_compute" }

# Data Importer dependencies
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "fysarum_demo"
path = "src/main.rs"
